--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>IGTI 2.0 - Meu Bootcamp DevOps</h1>
+					<h1>IGTI 2.0 - Bootcamp DevOps Construindo uma pipeline com o Jenkins</h1>
 					<p>A responsive business oriented template with a video background<br />
 					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
 				</div>
